--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.percent.PercentRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ru.jollydroid.percentlibrarydemo.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+        android:gravity="center_horizontal"
+        android:text="Percent Support Library Demo"/>
+
+    <TextView
+        android:background="#00ffff"
+        android:gravity="center"
+        android:text="Target"
+        app:layout_heightPercent="30%"
+        app:layout_marginLeftPercent="55%"
+        app:layout_marginTopPercent="15%"
+        app:layout_widthPercent="30%"/>
+
+    <TextView
+        android:layout_alignParentBottom="true"
+        android:background="#ff00ff"
+        android:gravity="center"
+        android:text="Square"
+        app:layout_aspectRatio="100%"
+        app:layout_marginBottomPercent="10%"
+        app:layout_marginLeftPercent="10%"
+        app:layout_widthPercent="20%"/>
+
+</android.support.percent.PercentRelativeLayout>
